// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complete() should do if return false and unknown reason. 1`] = `Array []`;

exports[`complete() should do if return false. 1`] = `
Array [
  Object {
    "payload": [Error: Error - Please select a valid record.],
    "type": "CATCH_BUSINESS_ERROR",
  },
]
`;

exports[`complete() should do if return true. 1`] = `
Array [
  Object {
    "payload": Array [
      "The timesheet has been imported.",
    ],
    "type": "TEST:SHOW_TOAST",
  },
]
`;

exports[`error() should do. 1`] = `
Array [
  Object {
    "payload": Object {
      "errorCode": undefined,
      "isContinuable": true,
      "isFunctionCantUseError": false,
      "message": "APIエラー - Error Test",
      "problem": "Error Test",
      "stackTrace": "",
      "type": "APIエラー",
    },
    "type": "CATCH_API_ERROR",
  },
]
`;

exports[`finally() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`start() should do. 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
]
`;
